hphp/test/zend/good/ext/filter/tests/bug44779.php
<?php
var_dump(filter_input(INPUT_SERVER, "PHP_SELF"));
?>